--- a/usr/src/pkgdefs/SUNWust1u.v/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWust1u.v/pkginfo.tmpl
@@ -30,11 +30,11 @@
 #
 PKG="SUNWust1u"
 NAME="UltraSPARC-T1 (User)"
-ARCH="sparc"
+ARCH="sparc.sun4v"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
-SUNW_PKGTYPE="usr"
+SUNW_PKGTYPE="kvm"
 MAXINST="1000"
 CATEGORY="system"
 DESC="UltraSPARC-T1 CPU utilities"
