6287497 openssl cpp flags needs to be adjusted for export builds

--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -118,6 +118,7 @@ ONBLD_TOOLS=		$(BUILD_TOOLS)/onbld
 JAVA_ROOT=	/usr/java
 
 SFW_ROOT=	/usr/sfw
+SFWINCDIR=	$(SFW_ROOT)/include
 SFWLIBDIR=	$(SFW_ROOT)/lib
 SFWLIBDIR64=	$(SFW_ROOT)/lib/$(MACH64)
 
