6203602 e1000g needs to support the Intel PCI-E card 6217046 we need to merge the Intel code (version 4.2.28) into e1000g

--- a/usr/src/pkgdefs/SUNWrmodr/i.master
+++ b/usr/src/pkgdefs/SUNWrmodr/i.master
@@ -177,8 +177,6 @@ pci8086,1010 pci8086,1010 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1011 pci8086,1011 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1012 pci8086,1012 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1013 pci8086,1013 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
-pci8086,101e pci8086,101e net pci none "Intel(R) PRO/1000 Server Adapter Driver"
-pci8086,101d pci8086,101d net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1014 pci8086,1014 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1015 pci8086,1015 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1016 pci8086,1016 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
@@ -186,15 +184,30 @@ pci8086,1017 pci8086,1017 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1018 pci8086,1018 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1019 pci8086,1019 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,101a pci8086,101a net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,101d pci8086,101d net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,101e pci8086,101e net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1026 pci8086,1026 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1027 pci8086,1027 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1028 pci8086,1028 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,105a pci8086,105a net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,105b pci8086,105b net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,105c pci8086,105c net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,105e pci8086,105e net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,105f pci8086,105f net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,1060 pci8086,1060 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,1061 pci8086,1061 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,1062 pci8086,1062 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,1063 pci8086,1063 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1075 pci8086,1075 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1076 pci8086,1076 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1077 pci8086,1077 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,1079 pci8086,1079 net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,107a pci8086,107a net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 pci8086,107b pci8086,107b net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,107c pci8086,107c net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,107d pci8086,107d net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,107e pci8086,107e net pci none "Intel(R) PRO/1000 Server Adapter Driver"
+pci8086,108a pci8086,108a net pci none "Intel(R) PRO/1000 Server Adapter Driver"
 EOF
 
 		# New adpu320 server entry
