6289474 C99LMODE should derive automatically from C99MODE

--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -345,7 +345,7 @@ CCERRWARN=		-xwe
 C99_ENABLE=	-xc99=%all
 C99_DISABLE=	-xc99=%none
 C99MODE=	$(C99_DISABLE)
-C99LMODE=	-Xc99=%none
+C99LMODE=	$(C99MODE:-xc99%=-Xc99%)
 
 # In most places, assignments to these macros should be appended with +=
 # (CPPFLAGS.master allows values to be prepended to CPPFLAGS).
