PSARC 2005/365 Nemo drivers interface simplification 6246540 race condition between aggr driver detach and create-aggr 6253542 dld breaks autopush, PPPoE, ipfilter for bge and xge 6261226 Nemo should use modhash 6272908 in.rarpd no longer works for GLDv3 interfaces 6303082 ill_tx fastpath lacks flow control

--- a/usr/src/pkgdefs/SUNWcnetr/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWcnetr/pkginfo.tmpl
@@ -41,7 +41,7 @@ DESC="core software for network infrastructure configuration"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none ipsecalgsbase preserve sock2path datalinkconf"
+CLASSES="none ipsecalgsbase preserve sock2path"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
