6305107 Reduction in optimisation level hurts performance

--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -363,7 +363,7 @@ amd64_ASFLAGS=	$(amd64_AS_XARCH)
 sparc_COPTFLAG=		-xO3
 sparcv9_COPTFLAG=	-xO3
 i386_COPTFLAG=		-O
-amd64_COPTFLAG=		-O
+amd64_COPTFLAG=		-xO3
 
 COPTFLAG= $($(MACH)_COPTFLAG)
 COPTFLAG64= $($(MACH64)_COPTFLAG)
