6273535 SUNWgrub* packages have incorrect pkginfo(4) settings 6305469 READ_FAIL_STAGE2 in installgrub/message.h contains wrong message 6305481  installgrub miscounts stage2 size in sector by 1 if stage2 size is multiple of 512 6307439 make clobber in usr/src/grub and usr/src/psm/stand/bootblks/ufs/i386 deletes files in proto 6307553 installgrub's output need to be syntax correct

--- a/usr/src/pkgdefs/SUNWgrub/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWgrub/pkginfo.tmpl
@@ -30,7 +30,7 @@
 PKG="SUNWgrub"
 NAME="GNU GRUB - GNU GRand Unified Bootloader"
 ARCH="ISA"
-VERSION="0.95.ONVERS,REV=0.0.0"
+VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
 SUNW_PKGTYPE="root"
@@ -44,7 +44,7 @@ CLASSES="none preserve"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
-SUNW_PKG_HOLLOW="false"
+SUNW_PKG_HOLLOW="true"
 #VSTOCK="<reserved by Release Engineering for package part #>"
 #ISTATES="<developer defined>"
 #RSTATES='<developer defined>'
