--- a/usr/src/pkgdefs/SUNWgrubS/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWgrubS/pkginfo.tmpl
@@ -30,7 +30,7 @@
 PKG="SUNWgrubS"
 NAME="Source for GNU GRUB - GNU GRand Unified Bootloader"
 ARCH="ISA"
-VERSION="0.95.ONVERS,REV=0.0.0"
+VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
 SUNW_PKGTYPE="usr"
