--- a/usr/src/pkgdefs/SUNWonmtst.v/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWonmtst.v/pkginfo.tmpl
@@ -1,7 +1,4 @@
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
-# Use is subject to license terms.
-#
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
@@ -22,6 +19,10 @@
 #
 # CDDL HEADER END
 #
+#
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
+#
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
 # This required package information file describes characteristics of the
@@ -29,15 +30,15 @@
 # and package architecture.
 #
 PKG="SUNWonmtst"
-NAME="sun4u Memory Test"
-ARCH="sparc"
+NAME="sun4v CPU/memory error injector"
+ARCH="sparc.sun4v"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
 SUNW_PKGTYPE="internal"
 MAXINST="1000"
 CATEGORY="internal"
-DESC="Sun4u-specific CPU/memory error injector for internal testing"
+DESC="Sun4v-specific CPU/memory error injector for internal testing"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact Mike Shapiro (mws@eng)"
 EMAIL="mws@eng"
