--- a/usr/src/pkgdefs/SUNWrmodr/i.master
+++ b/usr/src/pkgdefs/SUNWrmodr/i.master
@@ -539,6 +539,7 @@ EOF
 		    	echo $i $j >> $dest
 		    fi
 		done << EOF
+SVI0101 SVI0101 oth all none "Sun Fire B100x BSC"
 ACPI0001 acpi oth all none "ACPI SMBus 1.0 Host Controller"
 ACPI0002 acpi oth all none "ACPI Smart Battery Subsystem"
 ACPI0003 acpi oth all none "ACPI AC Device"
