--- a/usr/src/pkgdefs/SUNWipfh/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWipfh/pkginfo.tmpl
@@ -14,7 +14,7 @@ ARCH="ISA"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
-SUNW_PKGTYPE="root"
+SUNW_PKGTYPE="usr"
 MAXINST="1000"
 CATEGORY="system"
 DESC="C header files for IP Filter"
