--- a/usr/src/pkgdefs/SUNWpd/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWpd/pkginfo.tmpl
@@ -30,14 +30,14 @@
 #
 PKG="SUNWpd"
 NAME="PCI Drivers"
-ARCH="sparc"
+ARCH="ISA"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
 SUNW_PKGTYPE="root"
 MAXINST="1000"
 CATEGORY="system"
-DESC="Drivers for SPARC platforms with the PCI bus"
+DESC="Drivers for the PCI bus"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
