--- a/usr/src/pkgdefs/SUNWukspfw/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWukspfw/pkginfo.tmpl
@@ -1,4 +1,3 @@
-#!/bin/sh
 #
 # CDDL HEADER START
 #
@@ -21,40 +20,31 @@
 # CDDL HEADER END
 #
 #
-#
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
+
 #
- 
-PATH="/usr/bin:/usr/sbin:${PATH}"
-export PATH
-
-if [ "${BASEDIR:=/}" != "/" ] 
-then
-	BASEDIR_OPT="-b $BASEDIR" 
-fi
-
-not_installed() {
-	driver=$1
-	grep "^${driver} " $BASEDIR/etc/name_to_major > /dev/null 2>&1
-
-	return $?
-}
-
-EXIT=0
-
-#"usb6cd,12a"	Keyspan USA49WLC serial adapter, after fw downloaded.
-#"usb6cd,11a"	Keyspan USA49WLC serial adapter, before fw downloaded.
-#"usb6cd,121"	Keyspan USA19HS serial adapter.
-USBSKSP_ALIASES="\
-	\"usb6cd,12a\" \
-	\"usb6cd,11a\" \
-	\"usb6cd,121\" \
-	"
-
-not_installed usbsksp || add_drv ${BASEDIR_OPT} -m '* 0666 root sys' \
-	-i "${USBSKSP_ALIASES}" -n usbsksp || EXIT=1
-
-exit $EXIT
+# This required package information file describes characteristics of the
+# package, such as package abbreviation, full package name, package version,
+# and package architecture.
+#
+PKG="SUNWukspfw"
+NAME="USA49WLC firmware for USB Keyspan serial driver"
+ARCH="ISA"
+CATEGORY="system"
+BASEDIR=/
+SUNW_PKGTYPE="root"
+CLASSES="none"
+DESC="USA49WLC firmware for USB Keyspan serial driver"
+SUNW_PRODNAME="SunOS"
+SUNW_PRODVERS="RELEASE/VERSION"
+VERSION="ONVERS,REV=0.0.0"
+VENDOR="Sun Microsystems, Inc."
+HOTLINE="Please contact your local service provider"
+EMAIL=""
+MAXINST="1000"
+SUNW_PKGVERS="1.0"
+SUNW_PKG_ALLZONES="true"
+SUNW_PKG_HOLLOW="true"
