6367872 usbs49_fw module should not be replaced when upgrading system.

--- a/usr/src/pkgdefs/SUNWukspfw/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWukspfw/pkginfo.tmpl
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -36,7 +36,7 @@ ARCH="ISA"
 CATEGORY="system"
 BASEDIR=/
 SUNW_PKGTYPE="root"
-CLASSES="none"
+CLASSES="none preserve"
 DESC="USA49WLC firmware for USB Keyspan serial driver"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
