PSARC/2004/779 SATA HBA Framework Support PSARC/2005/679 SATA HBA Framework Support (update) 6296430 x86: support for Silicon Image 3124/3132 sata controllers 6326505 SATA framework needed to support controller-specific SATA HBA drivers operating in sata-native mode 6326531 cfgadm sata plugin needed for sata framework

--- a/usr/src/pkgdefs/SUNWsi3124/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWsi3124/pkginfo.tmpl
@@ -18,49 +18,28 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
-#
-# lib/cfgadm_plugins/Makefile
-#
 
-include $(SRC)/Makefile.master
-
-CLOSED_PLUGIN = $(CLOSED)/lib/cfgadm_plugins/
-
-COMMON_SUBDIRS= scsi pci usb ib
-sparc_SUBDIRS=	sbd
-
-i386_SUBDIRS= sata
-
-$(CLOSED_BUILD)sparc_SUBDIRS += $(CLOSED_PLUGIN)/ac
-$(CLOSED_BUILD)sparc_SUBDIRS += $(CLOSED_PLUGIN)/sysctrl
-
-SUBDIRS= $(COMMON_SUBDIRS) $($(MACH)_SUBDIRS)
-
-ALL_SUBDIRS= $(COMMON_SUBDIRS) $(sparc_SUBDIRS) $(i386_SUBDIRS)
-
-MSGSUBDIRS= $(ALL_SUBDIRS)
-
-all:= 		TARGET= all
-install:=	TARGET= install
-clean:=		TARGET= clean
-clobber:=	TARGET= clobber
-lint:=		TARGET= lint
-_msg:=		TARGET= _msg
-
-.KEEP_STATE:
-
-all clean clobber lint: $(SUBDIRS)
-
-install: all $(SUBDIRS)
-
-_msg: $(MSGSUBDIRS)
-
-$(ALL_SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-FRC:
+PKG=SUNWsi3124
+NAME=SiliconImage 3124 sata driver
+ARCH="ISA"
+VERSION="ONVERS,REV=0.0.0"
+SUNW_PRODNAME="SunOS"
+SUNW_PRODVERS="RELEASE/VERSION"
+SUNW_PKGVERS="1.0"
+SUNW_PKGTYPE="root"
+MAXINST="1000"
+CATEGORY=system
+VENDOR="Sun Microsystems, Inc."
+DESC="SiliconImage 3124 sata driver"
+CLASSES="none"
+HOTLINE="Please contact your local service provider"
+EMAIL=""
+BASEDIR=/
+SUNW_PKG_ALLZONES="true"
+SUNW_PKG_HOLLOW="true"
