--- a/usr/src/pkgdefs/SUNWzfsr/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWzfsr/pkginfo.tmpl
@@ -18,7 +18,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -44,4 +44,4 @@ CLASSES="none"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
-SUNW_PKG_HOLLOW="true"
+SUNW_PKG_HOLLOW="false"
