--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -168,6 +168,11 @@ WC=		/usr/bin/wc
 XARGS=		/usr/bin/xargs
 ELFSIGN=	/usr/bin/elfsign
 DTRACE=		/usr/sbin/dtrace
+CHECK_FNAMES=	$(ONBLD_TOOLS)/bin/check_fnames
+
+# Due to 6367203, objects built with gcc will fail the namespace checks.
+# Remove this override once the compiler bug is fixed.
+$(__GNUC)CHECK_FNAMES=	$(TRUE)
 
 FILEMODE=	644
 DIRMODE=	755
