--- a/usr/src/pkgdefs/SUNWdscpu.u/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWdscpu.u/pkginfo.tmpl
@@ -28,15 +28,15 @@
 # and package architecture.
 #
 PKG="SUNWdscpu"
-NAME="Domain to Service Processor Communications Protocol (Usr)"
+NAME="Domain to Service Processor Communications Protocol (Kvm)"
 ARCH="sparc.sun4u"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
-SUNW_PKGTYPE="root"
+SUNW_PKGTYPE="kvm"
 MAXINST="1000"
 CATEGORY="system"
-DESC="Domain to Service Processor Communications Protocol (Usr)"
+DESC="Domain to Service Processor Communications Protocol (Kvm)"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
