6406661 nightly doesn't tell about the shadow compiler 6406667 cw should tell you its version 6409965 cw waitpid and gcc writing to stderr can deadlock

--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -138,6 +138,7 @@ CHGRP=		$(TRUE)
 MV=		/usr/bin/mv -f
 RM=		/usr/bin/rm -f
 GREP=		/usr/bin/grep
+EGREP=		/usr/bin/egrep
 SED=		/usr/bin/sed
 NAWK=		/usr/bin/nawk
 CP=		/usr/bin/cp -f
