--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -953,3 +953,8 @@ CPPFORPO=$(COMPILE.cpp:\"$(TEXT_DOMAIN)\"=TEXT_DOMAIN)
 %_onc_plus:	%
 	@$(ECHO) "extracting code from $< ... "
 	sed -n -e '/ONC_PLUS EXTRACT START/,/ONC_PLUS EXTRACT END/p' $<  > $@
+
+#
+# Include rules to render automated sccs get rules "safe".
+# 
+include $(SRC)/Makefile.noget
