6268715 port_getn(3C) and port_sendn(3C) not working on Solaris x86 6315070 lib/libc/$MACH/Makefile: use correct macro for -xarch options in ASFLAGS 6359912 /usr/lib/values-(star).o files should be built with -K pic 6382561 _renameat has incorrect binding 6422703 Lack of /usr/sfw/bin/zsh in /etc/shells makes dtlogin fail.

--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -307,7 +307,7 @@ i386_XARCH=
 amd64_XARCH=		-xarch=amd64 -Ui386 -U__i386
 
 # assembler '-xarch' flag.  Different from compiler '-xarch' flag.
-sparc_AS_XARCH=		-xarch=v8
+sparc_AS_XARCH=		-xarch=v8plus
 sparcv9_AS_XARCH=	-xarch=v9
 i386_AS_XARCH=
 amd64_AS_XARCH=		-xarch=amd64 -P -Ui386 -U__i386
