6345641 sd.conf and ssd.conf may be overwritten because filetype is "f"

--- a/usr/src/pkgdefs/SUNWssad/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWssad/pkginfo.tmpl
@@ -38,7 +38,7 @@ CATEGORY="system"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKGTYPE="root"
-CLASSES="none"
+CLASSES="none preserve"
 DESC="ssd kernel device driver"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
