--- a/usr/src/pkgdefs/SUNWckr/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWckr/pkginfo.tmpl
@@ -44,7 +44,7 @@ DESC="core kernel software for a specific instruction-set architecture"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none etcsystem kcfconfbase manifest preserve renameold scsivhciconf"
+CLASSES="none etcsystem kcfconfbase manifest preserve renameold scsivhciconf sdconf"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
