--- a/usr/src/pkgdefs/SUNWrmodr/i.master
+++ b/usr/src/pkgdefs/SUNWrmodr/i.master
@@ -3,9 +3,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -21,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -146,6 +145,10 @@ pci8086,1032 pci8086,1032 net pci iprb.bef "Intel Pro/100 VE Ethernet"
 pci8086,1038 pci8086,1038 net pci iprb.bef "Intel 82559 PRO/100 VM Ethernet"
 pci8086,1039 pci8086,1039 net pci iprb.bef "Intel 82801DB Ethernet 82562ET/EZ PHY"
 pci8086,103d pci8086,103d net pci iprb.bef "Intel 82801DB PRO/100 VE Ethernet"
+pci8086,1050 pci8086,1050 net pci iprb.bef "Intel 82562EZ PRO/100 VE Ethernet"
+pci8086,1059 pci8086,1059 net pci iprb.bef "Intel 82551QM PRO/100 VE Ethernet"
+pci8086,1068 pci8086,1068 net pci iprb.bef "Intel 82562ET/EZ/GT/GZ - PRO/100 VE Ethernet"
+pci8086,1069 pci8086,1069 net pci iprb.bef "Intel 82562EM/EX/GX - PRO/100 VM Ethernet"
 pci8086,1229 pci8086,1229 net pci iprb.bef "Intel Pro100/B Fast Ethernet"
 pci8086,1229.8086.1009 pci8086,1229 net pci iprb.bef "Intel Pro100/B Fast Ethernet"
 pci8086,1229.8086.100c pci8086,1229 net pci iprb.bef "Intel Pro100/B Fast Ethernet"
@@ -155,6 +158,7 @@ pci8086,1229.8086.1015 pci8086,1229 net pci iprb.bef "Intel Pro100/B Fast Ethern
 pci8086,1229.8086.1016 pci8086,1229 net pci iprb.bef "Intel Pro100/B Fast Ethernet"
 pci8086,1229.8086.1017 pci8086,1229 net pci iprb.bef "Intel Pro100/B Fast Ethernet"
 pci8086,2449 pci8086,2449 net pci iprb.bef "Intel i815/82559 Ethernet"
+pci8086,27dc pci8086,27dc net pci iprb.bef "Intel ICH7 82801G Ethernet"
 EOF
 
 		# New igige server entry
