PSARC 2004/368 Secure By Default 4875624 *syslogd* turn off UDP listener by default 5004374 Ship with remote services disabled by default 5016956 By default rpcbind should not listen for remote requests 5016975 By default snmpd/dx should not be enabled. 5016998 By default inetd should not listen for remote connections. 5017041 By default sendmail should not listen for remote connections 5046450 Create a greenline profile for Secure by Default installation 6267741 RFE: One-touch knob for outbound-only sendmail 6414308 syslogd could use some lint soap

--- a/usr/src/pkgdefs/SUNWsacom/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWsacom/pkginfo.tmpl
@@ -35,7 +35,7 @@ ARCH="ISA"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 CATEGORY="system"
-CLASSES="none initd preserve"
+CLASSES="none initd preserve manifest"
 DESC="Solstice Enterprise Agents 1.0.3 files for root file system"
 MAXINST="1000"
 NAME="Solstice Enterprise Agents 1.0.3 files for root file system"
