--- a/usr/src/pkgdefs/SUNWmdr/postinstall.tmpl
+++ b/usr/src/pkgdefs/SUNWmdr/postinstall.tmpl
@@ -3,9 +3,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -21,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -228,6 +227,8 @@ if [ $MDDB_STATUS -eq 0 ]; then
 
 else
 	echo "/usr/sbin/svcadm disable system/metainit:default" >> \
+		$BASEDIR/var/svc/profile/upgrade
+	echo "/usr/sbin/svcadm disable system/metasync:default" >> \
 		$BASEDIR/var/svc/profile/upgrade
 
 	for svc in meta mdcomm metamed metamh; do
