--- a/usr/src/pkgdefs/SUNWldomr.v/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWldomr.v/pkginfo.tmpl
@@ -40,7 +40,7 @@ DESC="Solaris Logical Domains Configuration Files"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none"
+CLASSES="none manifest"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
