6421380 nm uses too many digits when formatting 64-bit hex values 6424132 elfdump inserts extra whitespace in bitmap value display

--- a/usr/src/cmd/sgs/packages/common/pkginfo.tmpl
+++ b/usr/src/cmd/sgs/packages/common/pkginfo.tmpl
@@ -1,13 +1,12 @@
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -43,6 +42,6 @@ CATEGORY="internal"
 DESC="OS-Net Static/Dynamic linker package"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="see email"
-EMAIL="Rod.Evans@Sun.COM Michael.Walker@Sun.COM"
+EMAIL="Rod.Evans@Sun.COM Ali.Bahrami@Sun.COM"
 CLASSES="none"
 BASEDIR=/
