6448696 ON printing packages cannot integrate

--- a/usr/src/pkgdefs/SUNWpapi/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWpapi/pkginfo.tmpl
@@ -31,7 +31,7 @@
 PKG="SUNWpapi"
 NAME="Free Standards Group Open Printing API"
 ARCH="ISA"
-VERSION="ONVERS,REV=0.0.0"
+VERSION="ONVERS.0,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
 SUNW_PKGTYPE="usr"
