--- a/usr/src/pkgdefs/SUNWpsm-ipp/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWpsm-ipp/pkginfo.tmpl
@@ -29,9 +29,9 @@
 # and package architecture.
 #
 PKG="SUNWpsm-ipp"
-NAME="Free Standards Group Open Printing API IPP Print Service Module"
+NAME="FSG Open Printing API IPP Print Service Module"
 ARCH="ISA"
-VERSION="ONVERS,REV=0.0.0"
+VERSION="ONVERS.0,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
 SUNW_PRODVERS="RELEASE/VERSION"
 SUNW_PKGTYPE="usr"
