--- a/usr/src/pkgdefs/SUNWkvmt200.v/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWkvmt200.v/pkginfo.tmpl
@@ -32,7 +32,8 @@
 # and package architecture.
 #
 PKG="SUNWkvmt200"
-NAME="Core Architecture Sun-Fire-T200 Sun-Fire-T1000, (Kvm)"
+NAME="Core Architecture Sun-Fire-T200 Sun-Fire-T1000 SPARC-Enterprise-T2000 \
+SPARC-Enterprise-T1000, (Kvm)"
 ARCH="sparc.sun4v"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
