backout 6311077: causes 6453635, due to 6454083

--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -279,8 +279,6 @@ V9ABIWARN=
 CCREGSYM=		-Wc,-Qiselect-regsym=0
 CCCREGSYM=		-Qoption cg -Qiselect-regsym=0
 
-# prevent static symbols being optimized out
-CCSTATICSYM=		-Wc,-Qassembler-ounrefsym=0
 #
 # generate 32-bit addresses in the v9 kernel. Saves memory.
 CCABS32=		-Wc,-xcode=abs32
@@ -360,8 +358,7 @@ C99LMODE=	$(C99MODE:-xc99%=-Xc99%)
 # In most places, assignments to these macros should be appended with +=
 # (CPPFLAGS.master allows values to be prepended to CPPFLAGS).
 sparc_CFLAGS=	$(sparc_XARCH)
-sparcv9_CFLAGS=	$(sparcv9_XARCH) -dalign $(CCVERBOSE) $(V9ABIWARN) $(CCREGSYM) \
-		$(CCSTATICSYM)
+sparcv9_CFLAGS=	$(sparcv9_XARCH) -dalign $(CCVERBOSE) $(V9ABIWARN) $(CCREGSYM)
 i386_CFLAGS=	$(i386_XARCH)
 amd64_CFLAGS=	$(amd64_XARCH)
 
@@ -400,18 +397,12 @@ CDWARFSTR=	-_gcc=-fno-dwarf2-indirect-strings
 CALLSYMS=	-W0,-xdbggen=no%usedonly
 
 #
-# Default debug format for Sun Studio 11 is dwarf, so force it to
-# generate stabs.
-#
-DEBUGFORMAT=	-xdebugformat=stabs
-
-#
 # Flags used to build in debug mode for ctf generation.  Bugs in the Devpro
 # compilers currently prevent us from building with cc-emitted DWARF.
 #
 CTF_FLAGS_sparc	= -g -Wc,-Qiselect-T1 $(C99MODE) $(CNOGLOBAL) $(CDWARFSTR)
 CTF_FLAGS_i386	= -g $(C99MODE) $(CNOGLOBAL) $(CDWARFSTR)
-CTF_FLAGS	= $(CTF_FLAGS_$(MACH)) $(DEBUGFORMAT)
+CTF_FLAGS	= $(CTF_FLAGS_$(MACH))
 
 #
 # Flags used with genoffsets
@@ -429,26 +420,13 @@ OFFSETS_CREATE64 = $(GENOFFSETS) -s $(CTFSTABS) -r $(CTFCONVERT) \
 #
 # tradeoff time for space (smaller is better)
 #
-sparc_SPACEFLAG		= -xspace -W0,-Lt
-sparcv9_SPACEFLAG	= -xspace -W0,-Lt
+sparc_SPACEFLAG		= -xspace -W0,-Lt -W2,-Rcond_elim
+sparcv9_SPACEFLAG	= -xspace -W0,-Lt -W2,-Rcond_elim
 i386_SPACEFLAG		= -xspace
 amd64_SPACEFLAG		=
 
 SPACEFLAG		= $($(MACH)_SPACEFLAG)
 SPACEFLAG64		= $($(MACH64)_SPACEFLAG)
-
-#
-# The Sun Studio 11 compiler has changed the behaviour of integer
-# wrap arounds and so a flag is needed to use the legacy behaviour
-# (without this flag panics/hangs could be exposed within the source).
-#
-sparc_IROPTFLAG		= -W2,-xwrap_int
-sparcv9_IROPTFLAG	= -W2,-xwrap_int
-i386_IROPTFLAG		=
-amd64_IROPTFLAG		=
-
-IROPTFLAG		= $($(MACH)_IROPTFLAG)
-IROPTFLAG64		= $($(MACH64)_IROPTFLAG)
 
 sparc_XREGSFLAG		= -xregs=no%appl
 sparcv9_XREGSFLAG	= -xregs=no%appl
@@ -459,10 +437,10 @@ XREGSFLAG		= $($(MACH)_XREGSFLAG)
 XREGSFLAG64		= $($(MACH64)_XREGSFLAG)
 
 CFLAGS=         $(COPTFLAG) $($(MACH)_CFLAGS) $(SPACEFLAG) $(CCMODE) \
-		$(ILDOFF) $(CERRWARN) $(C99MODE) $(CCUNBOUND) $(IROPTFLAG) \
+		$(ILDOFF) $(CERRWARN) $(C99MODE) $(CCUNBOUND) \
 		$(CGLOBALSTATIC)
 CFLAGS64=       $(COPTFLAG64) $($(MACH64)_CFLAGS) $(SPACEFLAG64) $(CCMODE64) \
-		$(ILDOFF) $(CERRWARN) $(C99MODE) $(CCUNBOUND) $(IROPTFLAG64) \
+		$(ILDOFF) $(CERRWARN) $(C99MODE) $(CCUNBOUND) \
 		$(CGLOBALSTATIC)
 NATIVE_CFLAGS=	$(COPTFLAG) $($(NATIVE_MACH)_CFLAGS) $(CCMODE) \
 		$(ILDOFF) $(CERRWARN) $(C99MODE) $($(NATIVE_MACH)_CCUNBOUND) \
@@ -613,7 +591,7 @@ NATIVE_MACH=	$(MACH:amd64=i386)
 # Defined here so it can be overridden by developer.
 #
 SPRO_ROOT=		$(BUILD_TOOLS)/SUNWspro
-SPRO_VROOT=		$(SPRO_ROOT)/SS11
+SPRO_VROOT=		$(SPRO_ROOT)/SOS10
 GNU_ROOT=		$(SFW_ROOT)
 
 # Specify platform compiler versions for languages
