6384266 e1000g driver should provide external loopback support 6428883 NEM e1000g drive netlbtest intermittent failed when running Sunvts FUNC test with cputest,vmemtest.. 6430731 e1000g.conf file removed on upgrade 6431317 add support for intel Pro/1000 PT Adapter 6433236 Update the e1000g driver with the latest shared code from Intel 6439589 e1000g: whines about checksum capability, unclear what user should do 6441386 The default value of some e1000g parameters may impact rx performance 6445239 assertion failed: cookie_count == 1, file: ../../common/io/e1000g/e1000g_alloc.c, line: 422 6447914 e1000g should support setting of multiple unicast addresses 6449595 Ophir LAA driver workaround is not working for e1000g Driver

--- a/usr/src/pkgdefs/SUNWintgige/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWintgige/pkginfo.tmpl
@@ -35,7 +35,7 @@ SUNW_PKGVERS=1.0
 SUNW_PKGTYPE=root
 MAXINST=1000
 CATEGORY=system
-CLASSES=none
+CLASSES="none renamenew"
 DESC=Intel(R) PRO/1000 Server Adapter Driver
 VENDOR="Sun Microsystems, Inc."
 HOTLINE=Please contact your local service provider
