--- a/usr/src/pkgdefs/SUNWcart200.v/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWcart200.v/pkginfo.tmpl
@@ -32,8 +32,7 @@
 # and package architecture.
 #
 PKG="SUNWcart200"
-NAME="Core Architecture Sun-Fire-T200 Sun-Fire-T100 SPARC-Enterprise-T2000 \
-SPARC-Enterprise-T1000, (Root)"
+NAME="Core Architecture, sun4v-based platforms (Root)"
 ARCH="sparc.sun4v"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
