6489651 need a SUNWroutr package for the associated SMF manifests/methods (SUNWroute is "usr" SUNW_PKGTYPE) 6490110 src/cmd/ypcmd/Makefile doesn't clobber yp method script 6490558 in.ndpd doesn't start at boot when IPv6 interfaces are plumbed 6491410 routeadm in network/routing-setup can run before SMF routing manifests are imported and fails

--- a/usr/src/pkgdefs/SUNWroute/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWroute/pkginfo.tmpl
@@ -23,7 +23,7 @@ DESC="Network Routing daemons/commands (Usr)"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none manifest"
+CLASSES="none"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
