6391249 elfsign needs to support Verisign certificate chain

--- a/usr/src/Makefile.master
+++ b/usr/src/Makefile.master
@@ -775,24 +775,28 @@ ELFSIGN_O=	$(TRUE)
 ELFSIGN_CRYPTO=	$(ELFSIGN_O)
 ELFSIGN_OBJECT=	$(ELFSIGN_O)
 $(EXPORT_RELEASE_BUILD)ELFSIGN_O =	$(ELFSIGN)
+$(EXPORT_RELEASE_BUILD)ELFSIGN_CFNAME =	SUNWosnetCF
 $(EXPORT_RELEASE_BUILD)ELFSIGN_KEY =	\
-			$(CLOSED)/cmd/cmd-crypto/etc/keys/SUNWosnet
+			$(CLOSED)/cmd/cmd-crypto/etc/keys/$(ELFSIGN_CFNAME)
 $(EXPORT_RELEASE_BUILD)ELFSIGN_CERT=	\
-			$(CLOSED)/cmd/cmd-crypto/etc/certs/SUNWosnet
+			$(CLOSED)/cmd/cmd-crypto/etc/certs/$(ELFSIGN_CFNAME)
+$(EXPORT_RELEASE_BUILD)ELFSIGN_CLNAME =	SUNWosnetCFLimited
 $(EXPORT_RELEASE_BUILD)ELFSIGN_KEY_LIMITED =	\
-			$(CLOSED)/cmd/cmd-crypto/etc/keys/SUNWosnetLimited
+			$(CLOSED)/cmd/cmd-crypto/etc/keys/$(ELFSIGN_CLNAME)
 $(EXPORT_RELEASE_BUILD)ELFSIGN_CERT_LIMITED=	\
-			$(CLOSED)/cmd/cmd-crypto/etc/certs/SUNWosnetLimited
+			$(CLOSED)/cmd/cmd-crypto/etc/certs/$(ELFSIGN_CLNAME)
+$(EXPORT_RELEASE_BUILD)ELFSIGN_SENAME =	SUNWosnetSE
 $(EXPORT_RELEASE_BUILD)ELFSIGN_SEKEY =	\
-			$(CLOSED)/cmd/cmd-crypto/etc/keys/SUNWosnetSolaris
+			$(CLOSED)/cmd/cmd-crypto/etc/keys/$(ELFSIGN_SENAME)
 $(EXPORT_RELEASE_BUILD)ELFSIGN_SECERT=	\
-			$(CLOSED)/cmd/cmd-crypto/etc/certs/SUNWosnetSolaris
+			$(CLOSED)/cmd/cmd-crypto/etc/certs/$(ELFSIGN_SENAME)
 $(EXPORT_RELEASE_BUILD)ELFSIGN_CRYPTO=	$(ELFSIGN_O) sign \
 			$(ELFSIGN_FORMAT_OPTION) \
 			-k $(ELFSIGN_KEY) -c $(ELFSIGN_CERT) -e $@
 $(EXPORT_RELEASE_BUILD)ELFSIGN_CRYPTO_LIMITED=	$(ELFSIGN_O) sign \
 			$(ELFSIGN_FORMAT_OPTION) \
-			-k $(ELFSIGN_KEY_LIMITED) -c $(ELFSIGN_CERT_LIMITED) -e $@
+			-k $(ELFSIGN_KEY_LIMITED) -c $(ELFSIGN_CERT_LIMITED) \
+			-e $@
 $(EXPORT_RELEASE_BUILD)ELFSIGN_OBJECT=	$(ELFSIGN_O) sign \
 			$(ELFSIGN_FORMAT_OPTION) \
 			-k $(ELFSIGN_SEKEY) -c $(ELFSIGN_SECERT) -e $@
