--- a/usr/src/pkgdefs/SUNWibsdp/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWibsdp/pkginfo.tmpl
@@ -42,7 +42,7 @@ DESC="Sun InfiniBand layered Sockets Direct Protocol"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none"
+CLASSES="none sdpconf"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
