--- a/usr/src/pkgdefs/SUNWibsdpu/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWibsdpu/pkginfo.tmpl
@@ -42,7 +42,7 @@ DESC="Sun InfiniBand Sockets Direct Protocol Admin"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none sdpconf"
+CLASSES="none"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
