--- a/usr/src/pkgdefs/SUNWnxge.u/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWnxge.u/pkginfo.tmpl
@@ -1,4 +1,7 @@
 #
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
+#
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
@@ -18,21 +21,29 @@
 #
 # CDDL HEADER END
 #
-#
-# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
-# Use is subject to license terms.
-#
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
+# This required package information file describes characteristics of the
+# package, such as package abbreviation, full package name, package version,
+# and package architecture.
+#
+PKG="SUNWnxge"
+NAME="Sun NIU leaf driver"
+ARCH="sparc.sun4u"
+VERSION="ONVERS,REV=0.0.0"
+SUNW_PRODNAME="SunOS"
+SUNW_PRODVERS="RELEASE/VERSION"
+SUNW_PKGTYPE="root"
+SUNW_PKG_ALLZONES="true"
+SUNW_PKG_HOLLOW="true"
+SUNW_PKG_THISZONE="false"
+MAXINST="1000"
+CATEGORY="system"
+DESC="Sun NIU 10Gb/1Gb driver"
+VENDOR="Sun Microsystems, Inc."
+HOTLINE="Please contact your local service provider"
+EMAIL=""
+CLASSES="none renameold"
+BASEDIR=/
+SUNW_PKGVERS="1.0"
 
-include ../Makefile.com
-
-DATAFILES += depend i.renameold
-
-.KEEP_STATE:
-
-all: $(FILES) postinstall postremove
-
-install: all pkg
-
-include ../Makefile.targ
