--- a/usr/src/pkgdefs/SUNWnxge.v/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWnxge.v/pkginfo.tmpl
@@ -1,5 +1,5 @@
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # CDDL HEADER START
@@ -21,14 +21,14 @@
 #
 # CDDL HEADER END
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # This required package information file describes characteristics of the
 # package, such as package abbreviation, full package name, package version,
 # and package architecture.
 #
 PKG="SUNWnxge"
-NAME="UltraSPARC-T2 NIU leaf driver"
+NAME="Sun NIU leaf driver"
 ARCH="sparc.sun4v"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
@@ -39,11 +39,11 @@ SUNW_PKG_HOLLOW="true"
 SUNW_PKG_THISZONE="false"
 MAXINST="1000"
 CATEGORY="system"
-DESC="UltraSPARC-T2 NIU leaf driver"
+DESC="Sun NIU leaf driver"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none"
+CLASSES="none renameold"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 
