6484266 fasttrap needs to check for duplicate offsets 6497891 dtrace -G can fail due to uninitialized data 6504328 mapid disabling isn't enough 6512813 calendar-based DTrace tests fail when not in US/Pacific 6513027 tst.[v]fork.d needs updating for forksys() 6534984 fasttrap emulation code could use some work 6534988 remove the lint work-around from fasttrap 6534991 prepare the DTrace test suite for PIT

--- a/usr/src/pkgdefs/SUNWdtrt/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWdtrt/pkginfo.tmpl
@@ -23,23 +23,21 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-
 # ident	"%Z%%M%	%I%	%E% SMI"
-
-#
-# ASSERTION:
-# The trace buffer size can include any of the size suffixes k, m, g or t
-#
-# SECTION: dtrace Utility/-b Option
 #
 
-if [ $# != 1 ]; then
-	echo expected one argument: '<'dtrace-path'>'
-	exit 2
-fi
-
-dtrace=$1
-
-$dtrace -b 1t -b 2t -e
-
-exit $?
+PKG="SUNWdtrt"
+NAME="DTrace Test Suite"
+ARCH="ISA"
+VERSION="ONVERS,REV=0.0.0"
+SUNW_PRODNAME="SunOS"
+SUNW_PRODVERS="RELEASE/VERSION"
+MAXINST="1000"
+CATEGORY="internal"
+DESC="DTrace Test Suite Internal Distribution"
+VENDOR="Sun Microsystems, Inc."
+HOTLINE="Contact the DTrace discussion forum"
+EMAIL="dtrace-discuss@opensolaris.org"
+CLASSES="none"
+BASEDIR=/opt
+SUNW_PKGVERS="1.0"
