6467531 nightly(1) needs option to generate OpenSolaris delivery (fix ident)

--- a/usr/src/tools/opensolaris/README.opensolaris.tmpl
+++ b/usr/src/tools/opensolaris/README.opensolaris.tmpl
@@ -1,5 +1,6 @@
 		     OpenSolaris Buildable Source
-		%Z%%M%	%I%	%E% SMI
+
+#ident	"%Z%%M%	%I%	%E% SMI"
 
 Note: if this is your first OpenSolaris installation, please see the
 currently known issues section below to see the minimum build of
